//     Features:
//         First go new features. They usually start with "Add". If they mostly add things, they go to this part.
//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version: 2.9.0
Date: February 24th 2025
    Features:
        - Add related recipes to the Link Summary screen.
    Fixes:
        - (regression) Legacy summary pages could not be saved or loaded.
        - Quality bonuses/penalties in beacons were not handled correctly.
----------------------------------------------------------------------------------------------------------------------
Version: 2.8.1
Date: February 20th 2025
    Fixes:
        - (regression) Links for recipes with fluid outputs were not handled correctly.
----------------------------------------------------------------------------------------------------------------------
Version: 2.8.0
Date: February 19th 2025
    Features:
        - Detect lightning rods/collectors as electricity sources, and estimate the required accumulator count.
        - Added button to remove link from link summary screen.
        - Support production of quality items from quality inputs and/or quality modules.
    Fixes:
        - When creating launch recipes, obey the rocket capacity, not the item stack size.
        - Improve detection of special (e.g. barrelling, caging) recipes, especially with SA's recycling recipes.
        - (regression) Py TURDs and other disabled techs were considered enabled if they were not also hidden.
----------------------------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: January 27th 2025
    Features: