@@ -317,6 +317,16 @@ doneDrawing:;
             }
         }
 
+        if (entity.heatingPower != 0) {
+            using (gui.EnterGroup(contentPadding))
+            using (gui.EnterRow(0)) {
+                gui.AllocateRect(0, 1.5f);
+                gui.BuildText($"Requires {DataUtils.FormatAmount(entity.heatingPower, UnitOfMeasure.Megawatt)}");
+                gui.BuildFactorioObjectIcon(Database.heat, IconDisplayStyle.Default with { Size = 1.5f });
+                gui.BuildText("heat on cold planets.");
+            }
+        }
+
         string? miscText = null;
 
         switch (entity) {
