@@ -14,6 +14,10 @@
 //         Bugfixes go there.
 //     Internal changes:
 //         Changes to the code that do not affect the behavior of the program.
+Version:
+Date:
+    Features:
+        - (SA) Calculate the required heating and show it in tooltips and the shopping list.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.9.0
 Date: February 24th 2025
